--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -28,6 +28,20 @@ a {
 header {
   width: 100%;
 }
+ol {
+  margin: 0;
+  padding-left: 15px;
+}
+li {
+  list-style-position: outside;
+}
+p {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+}
 
 
 
@@ -118,7 +132,7 @@ header {
   align-items: center;
   text-align: center;
   font-family: SF-display-ultralight;
-  cursor: pointer;
+  cursor: default;
 }
 
 
@@ -152,6 +166,7 @@ header {
   justify-content: center;
   align-items: center;
   border-right: 1px solid #FFF;
+  cursor: default;
 }
 
 
@@ -200,7 +215,7 @@ header {
   height: 40px;
   text-align: center;
   color: #000;
-  font-size: 2rem;
+  font-size: 1rem;
   position: absolute;
   right: 7%;
   top: 28%;
@@ -279,7 +294,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
+  cursor: default;
   font-family: SF-display-ultralight;
 }
 
@@ -293,10 +308,17 @@ header {
   height: 100vh;
   z-index: 20;
   background-color: #FFF;
-  position: absolute;
+  position: fixed;
   top: 0%;
   left: 0;
   display: none;
+}
+.homePage-about-wrap {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
 }
 .homePage-about-top {
   display: flex;
@@ -305,6 +327,7 @@ header {
   width: 85%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 10px;
 }
 .homePage-about-top-title,
 .homePage-about-top-language {
@@ -335,18 +358,24 @@ header {
 .inner-text {
   font-size: 1rem;
   font-family: SF-text-light;
-  line-height: 1.5rem;
+  line-height: 1.2rem;
 }
-.homePage-about-text-en-second {
-  /*margin-top: 50px;*/
+.homePage-about-article {
+  width: 100%;
+  margin-top: 30px;
+}
+.homePage-about-article-title {
+  font-family: SF-display-thin;
+  margin-bottom: 10px;
 }
 .homePage-about-close {
   width: 30px;
   height: 30px;
   background-color: #000;
   position: absolute;
-  bottom: 30px;
+  /*bottom: 10px;*/
   left: calc((100% - 30px) / 2);
+  margin-top: 30px;
 }
 .homePage-about-closeBar {
   position: absolute;
@@ -356,39 +385,49 @@ header {
   height: 20px;
   background-color: #FFF;
 }
-
-
-
-
-
-
-/************************  SCREEN BREAKPOINT  ***********************/
-@media only screen and (max-width: 575px) {
-  .creationPanel-skin-tattoo {
-    font-size: 2rem;
-  }
-  /*.creationPanel-toolbar-skincolor {
-    font-size: 0.8rem;
-  }*/
-  .creationPanel-toolbar-font {
-    font-size: 0.8rem;
-  }
-  .creationPanel-toolbar-fontList-item {
-    font-size: 1.5rem;
-  }
-  .footer-navbar-item {
-    font-size: 0.8rem;
-  }
+.wrap {
+  width: 100%;
+  height: 100%;
 }
-@media only screen and (min-width: 576px) and (max-width: 767px) {
 
+
+
+
+
+
+/************************  Line Code  ***********************/
+.homePage-lineCode {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  z-index: 10;
+  background-color: rgb(0,0,0);
+  justify-content: center;
+  align-items: center;
+  display: none;
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-
+.homePage-lineCode-img {
+  width: 250px;
+  height: 250px;
+  background-image: url("../../images/line.png");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
-@media only screen and (min-width: 991px) and (max-width: 1199px) {
-
+.homePage-lineCode-close {
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  position: absolute;
+  bottom: 20px;
+  left: calc((100% - 40px) / 2);
 }
-@media only screen and (min-width: 1200px) {
-
+.homePage-lineCode-closeBar {
+  position: absolute;
+  left: 19.5px;
+  top: 7.5px;
+  width: 1px;
+  height: 25px;
+  background-color: #FFF;
 }
