--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -388,6 +388,57 @@ h1,h2,h3,h4,h5,h6 {
 
 
 
+/************************  Contact  ***********************/
+.homePage-contact {
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+  background-color: #000;
+  position: fixed;
+  top: 0%;
+  left: 0;
+  display: none;
+}
+.homePage-contact-wrap {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.homePage-contact-list-item {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  color: #FFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  font-family: SF-display-light;
+}
+.homePage-contact-close {
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+.homePage-contact-closeBar {
+  position: absolute;
+  left: 19.5px;
+  top: 7.5px;
+  width: 1px;
+  height: 25px;
+  background-color: #FFF;
+}
+
+
+
 
 /************************  Line Code  ***********************/
 .homePage-lineCode {
@@ -396,7 +447,7 @@ h1,h2,h3,h4,h5,h6 {
   position: absolute;
   top: 0%;
   left: 0%;
-  z-index: 10;
+  z-index: 20;
   background-color: rgb(0,0,0);
   justify-content: center;
   align-items: center;
